chage volume /var/mesos to /var/mesos_slave

--- a/docker-compose/slave/docker-compose.yml
+++ b/docker-compose/slave/docker-compose.yml
@@ -3,7 +3,7 @@ mesos_slave:
     net: "host"
     privileged: true
     volumes:
-      - /var/mesos:/var/mesos
+      - /var/mesos_slave:/var/mesos_slave
       - /var/run/docker.sock:/var/run/docker.sock
       - /sys/fs/cgroup:/sys/fs/cgroup
     container_name: mesos_slave
