--- a/docker-compose/slave/docker-compose.yml
+++ b/docker-compose/slave/docker-compose.yml
@@ -1,5 +1,5 @@
 mesos_slave:
-    image: daocloud.io/adolphlwq/mesos_slave:blogdemo-2221252
+    image: daocloud.io/adolphlwq/mesos_slave:master-1846d8b
     net: "host"
     privileged: true
     volumes:
