--- a/docker-compose/master/docker-compose.yml
+++ b/docker-compose/master/docker-compose.yml
@@ -31,7 +31,7 @@ dnsserver:
     container_name: mesosdns
 
 linker_router:
-    image: linkerrepository/linker_router
+    image: docker-linker_router
     net: host
     privileged: true
     container_name: linker_router
