--- a/docker-compose/master/docker-compose.yml
+++ b/docker-compose/master/docker-compose.yml
@@ -1,20 +1,18 @@
 mesos_master:
-    image: daocloud.io/adolphlwq/docker-mesos:blogdemo-c2f1d67
+    image: daocloud.io/adolphlwq/docker-mesos-master:gic-13f0e95
     net: "host"
     privileged: true
     volumes:
       - /var/mesos:/var/mesos
     container_name: mesos_master
     env_file: mesos_master_env
-#    command: mesos-master &
 
-marathom:
-    image: daocloud.io/adolphlwq/docker-marathon:master-343815a
+marathon:
+    image: mesoscloud/marathon
     net: "host"
     privileged: true
     container_name: marathon
     env_file: marathon_env
-#    command: marathon &
 
 zookeeper:
     image: daocloud.io/adolphlwq/docker-zookeeper:master-81e69c8
